--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,17 @@
 
     {% block core_css %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gorditas:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css%}
     {% endblock %}
     
     {% block core_js %}
+    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
@@ -29,20 +34,217 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Jones Honey {% block extra_title %}{% endblock %}</title>
+    <title>Mel Jones Honey {% block extra_title %}{% endblock %}</title>
   </head>
 
   <body>
-
-    <header class="container-fluid fixed-top"></header>
    
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
-      <header>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container">
+          <h1 class="pb-2 ml-md-0 ml-sm-3 ml-0 mr-3">
+            <a href="#">
+             <!--<img class="icon" src="/media/bee.png"> --> 
+              <p class="logo">JONES</p>
+              <p class="logo">HONEY</p>
+            </a>
+          </h1>
+          <button class="navbar-toggler my-2" type="button" data-toggle="collapse" data-target="#navbarCollapse">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse flex-column align-items-start ml-lg-2 ml-0" id="navbarCollapse">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link text-black" href="#">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Shop
+                  </a>
+                  <div class="dropdown-menu heather" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item text-black" href="#">All Products</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item text-black" href="#">Honey</a>
+                      <a class="dropdown-item text-black" href="#">Accessories</a>
+                      <a class="dropdown-item text-black" href="#">Courses</a>                      
+                      <a class="dropdown-item text-black" href="#">Gift Vouchers</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-black" href="#">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-black" href="#">Blog</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav flex-row mb-md-1 mt-md-0 mb-3 mt-2">
+                  <li class="nav-item">
+                    <a class="nav-link dropdown-toggle text-black dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                       <div class="text-center">
+                            <p class="my-0">
+                             My Account
+                            </p>
+                            <div>
+                              <i class="fas fa-shopping-bag fa-lg"></i>
+                            </div>
+                        </div>
+                    </a>
+                  <div class="dropdown-menu heather" aria-labelledby="navbarDropdown">
+                      {% if request.user.is_authenticated %}
+                          {% if request.user.is_superuser %}
+                              <a class="dropdown-item text-black" href="#">Product Management</a>
+                          {% endif %}
+                              <a class="dropdown-item text-black" href="#">My Profile</a>
+                              <a class="dropdown-item text-black" href="#">Logout</a>
+                          {% else %}
+                              <a class="dropdown-item text-black" href="#">Register</a>                      
+                              <a class="dropdown-item text-black" href="#">Sign In</a>
+                          {% endif %}
+                  </div>
+                  </li>
+                  <li class="nav-item">
+                    <form method="GET" action="#" class="d-flex flex-column align-items-center">
+                      <input class="search-box" type="text" name="q" placeholder="Type to search" aria-label="Search">
+                      <div><i class="fa-solid fa-magnifying-glass fa-lg red" id="basic-addon1" type="submit"></i></div>
+                      <button type="button">Search</button>
+                    </form>
+                  </li>
+                  <li class="nav-item">
+                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                        <div class="text-center">
+                            <p class="my-0">
+                                {% if grand_total %}
+                                    ${{ grand_total|floatformat:2 }}
+                                {% else %}
+                                    $0.00
+                                {% endif %}
+                            </p>
+                            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                        </div>
+                    </a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+  <!--
+    <div class="container-fluid navbar navbar-expand-lg">
+      <div class="row nav-row flex-nowrap">
+          <div class="col-3">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".collapsing-item" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+          </div>
+          <div class="col-3">
+            <div class="collapse navbar-collapse collapsing-item">
+            <a class="nav-link">ACCOUNT</a>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="collapse navbar-collapse collapsing-item">
+            <a class="nav-link">BASKET</a>
+            </div>
+          </div>
+          <div class="col-3">
+            <a class="nav-link" href="{% url 'home' %}">JONES HONEY</a>
+          </div>
+      </div>
+      <div class="row nav-row flex-nowrap">
+          <div class="collapse navbar-collapse collapsing-item">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Disabled</a>
+            </li>
+          </ul>
+          </div>
+      </div>
+      <div class="row nav-row flex-nowrap">
+          <div class="collapse navbar-collapse collapsing-item">
+            <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+      </div>
+          
+  </div>
+  -->
 
+  
+
+        
+        <!--
+           <div class="container container-fluid navbar navbar-expand-lg mt-3">
+              <div class="row">
+                <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target=".collapsing-item" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                  <div class="col-4 collapsing-item">
+                      <a class="align-middle">My Account</a>
+                  </div>
+                </div>
+                  <div class="col-4">
+                      <a href="">Jones Honey</a>  
+                  </div>
+                  <div class="collapse navbar-collapse">
+                    <div class="col-4 collapsing-item">
+                      <a class="align-middle">Cart</a>
+                    </div>
+                  </div> 
+              </div>
+              <div class="row">
+                <div class="col-12">
+                    <div class="collapse navbar-collapse w-100" id="navbarNavAltMarkup">
+                        <div class="navbar-nav w-100">
+                            <div class="col-3 collapsing-item">
+                                <a class="nav-item nav-link text-black" href="#">About</a>
+                            </div>
+                            <div class="col-3 collapsing-item">
+                              <a class="nav-item nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Shop
+                            </a>
+                            <div class="dropdown-menu heather" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item text-black" href="">All Products</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text-black" href="">Honey</a>
+                                <a class="dropdown-item text-black" href="">Accessories</a>
+                                <a class="dropdown-item text-black" href="">Courses</a>                      
+                                <a class="dropdown-item text-black" href="">Gift Vouchers</a>
+                            </div>
+                            </div>
+                            <div class="col-3 collapsing-item">
+                              <a class="nav-item nav-link" href="#">FAQ</a>
+                            </div>
+                            <div class="col-3 collapsing-item">
+                              <a class="nav-item nav-link" href="#">Blog</a>
+                            </div>
+                          </div>
+                    </div>
+                </div>                 
+           </div>    
+           <div class="row">
+                  <div class="col-12 d-flex justify-content-center">
+                    <form class="form-inline my-2 my-lg-0">
+                      <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                  </div>
+              </div>
+          </div>
+        -->
+         
       </header>
 
 
