Added product details functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,6 +23,11 @@ body {
     width: 2rem;
 }
 
+/* ensures the increment/decrement arrows always display */
+input{
+    opacity: 1;
+  }
+
 
 .shop-now-button {
     background: black;
