--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
                     <div class="row mx-4">
                         <div class="my-5">
                             <h4>
-                                <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                                <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                             </h4>
                         </div>
                     </div>
