Add search functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
                         </div>
                         </li>
                         <li class="nav-item text-black">
-                          <form method="GET" action="#" class="d-flex flex-column align-items-center text-black">
+                          <form method="GET" action="{% url 'products' %}" class="d-flex flex-column align-items-center text-black">
                             <input class="search-box text-black search-input" type="text" name="q" placeholder="Type to search" aria-label="Search">
                             <div><i class="fa-solid fa-magnifying-glass fa-lg" id="basic-addon1" type="submit"></i></div>
                             <button class="search-btn" type="button">Search</button>
