Added product sorting

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -35,7 +35,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-font text-black">Products</h2>
+            <a href="{% url 'products' %}">
+                <h2 class="logo-font text-black">Products</h2>
+            </a>
+            
             {% for c in current_categories %}
                 <a class="category-badge text-muted" href="{% url 'products' %}?category={{ c.name }}">
                     <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
@@ -62,18 +65,12 @@
         </div>
         <div class="col-12 col-md-4 offset-md-4 my-auto order-md-last d-flex justify-content-center">
             <p class="text-muted mt-3 text-center">
-                {% if search_term or current_cattegories or current_sorting != 'None_None' %}
-                    <span class="small"><a href="{% url 'products' %}">Products Home</a></span>
-                {% endif %}
                 {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
             </p>
         </div>
     </div>
     <div class="row">
         <div class="product-container col-10 offset-1">
-            <div class="row mt-1 mb-2">
-                
-            </div>
             <div class="row">
                 {% for product in products %}
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
