--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                             Shop
                         </a>
                         <div class="dropdown-menu heather" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-black" href="{% url 'products' %}">All Products</a>
+                            <a class="dropdown-item text-black" href="{% url 'products' %}?sort=price&direction=asc">All Products</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item text-black" href="{% url 'products' %}?category=honey">Honey</a>
                             <a class="dropdown-item text-black" href="{% url 'products' %}?category=accessories">Accessories</a>
