--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,28 +3,28 @@
 
 {% block content %}
 <div class="container-fluid p-0">
-    <div class="row text-center bg-white text-black  p-4">
-        <div class="col col-md-2 bg-white text-black">
+    <div class="row text-center bg-grey text-black  p-4">
+        <div class="col col-md-2 text-black">
             <a href="{% url 'products' %}" class="dropdown-toggle text-black">
                 All Products
             </a>
         </div>
-        <div class="col col-md-2 bg-white text-black">
+        <div class="col col-md-2 text-black">
             <a href="{% url 'products' %}?category=honey" class="text-black">
                 Honey
             </a>
         </div>
-        <div class="col col-md-2 bg-white text-black">
+        <div class="col col-md-2 text-black">
             <a class="text-black" href="{% url 'products' %}?category=accessories">
                 Accessories
             </a>
         </div>
-        <div class="col col-md-2 bg-white text-black">
+        <div class="col col-md-2 text-black">
             <a class="text-black" href="{% url 'products' %}?category=courses">
                 Courses
             </a>
         </div>
-        <div class="col col-md-2 bg-white text-black">
+        <div class="col col-md-2 text-black">
             <a class="text-black" href="{% url 'products' %}?category=vouchers">
                 Gift Vouchers
             </a>
@@ -69,7 +69,7 @@
             </p>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-3">
         <div class="product-container col-10 offset-1">
             <div class="row">
                 {% for product in products %}
@@ -110,31 +110,27 @@
                     </div>
                     {% if forloop.counter|divisibleby:1 %}
                         <div class="col-12 d-sm-none mb-5">
-                            <hr>
                         </div>
                     {% endif %}                        
                     {% if forloop.counter|divisibleby:2 %}
                         <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                            <hr>
                         </div>
                     {% endif %}
                     {% if forloop.counter|divisibleby:3 %}
                         <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                            <hr>
                         </div>
                     {% endif %}
                     {% if forloop.counter|divisibleby:4 %}
                         <div class="col-12 d-none d-xl-block mb-5">
-                            <hr>
                         </div>
                     {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col d-flex justify-content-center">
-            <div class="btt-button">
+            <div class="btt-button btn-circle">
                 <a class="btt-link d-flex h-100">
                     <i class="fas fa-arrow-up fa-2x text-black mx-auto my-auto"></i>
                 </a>
