--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -36,21 +36,19 @@
     <div class="row">
         <div class="col text-center mt-3">
             <a href="{% url 'products' %}">
-                <h2 class="logo-font text-black">Products</h2>
+                <h2 class="logo-font text-darker my-3">Products</h2>
             </a>
-            
             {% for c in current_categories %}
                 <a class="category-badge text-muted" href="{% url 'products' %}?category={{ c.name }}">
                     <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
                 </a>
             {% endfor %}
-            <hr class="w-50 mb-1">
         </div>
     </div>
     <div class="row">
         <div class="col-12 col-md-4 offset-md-4 my-auto order-md-last d-flex justify-content-center">
             <div class="sort-select-wrapper w-50">
-                <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                <select id="sort-selector" class="custom-select custom-select-sm border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                     <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                     <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                     <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
@@ -130,7 +128,7 @@
     </div>
     <div class="row mb-5">
         <div class="col d-flex justify-content-center">
-            <div class="btt-button btn-circle">
+            <div class="btn-circle">
                 <a class="btt-link d-flex h-100">
                     <i class="fas fa-arrow-up fa-2x text-black mx-auto my-auto"></i>
                 </a>
