--- a/templates/base.html
+++ b/templates/base.html
@@ -146,23 +146,23 @@
     {% block content %}
     {% endblock %}
 
-    <footer id="footer" class="sunset text-black d-flex-column text-center py-3 my-5">
+    <footer id="footer" class="sunset text-darker d-flex-column text-center py-3 my-5">
       <div class="text-center container-fluid">
         <h4 class="mb-2">Follow our Journey</h4>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#" title="Facebook">
-              <i class="fab fa-facebook-square fa-2x text-black"></i>
+              <i class="fab fa-facebook-square fa-2x text-darker"></i>
             </a>
           </li>
           <li class="list-inline-item text-black">
             <a href="#" title="Twitter">
-              <i class="fab fa-instagram-square fa-2x text-black mx-2"></i>
+              <i class="fab fa-instagram-square fa-2x text-darker mx-2"></i>
             </a>
           </li>
           <li class="list-inline-item">
             <a href="#" title="Youtube">
-              <i class="fab fa-youtube-square fa-2x text-black"></i>
+              <i class="fab fa-youtube-square fa-2x text-darker"></i>
             </a>
           </li>
         </ul>
