--- a/templates/base.html
+++ b/templates/base.html
@@ -55,14 +55,14 @@
                 <div class="collapse navbar-collapse flex-column align-items-start ml-lg-2 ml-0" id="navbarCollapse">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link text-black" href="#">About</a>
+                        <a class="nav-link text-black grey-hover" href="#">About</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-black grey-hover" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Shop
                         </a>
                         <div class="dropdown-menu heather" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-black" href="{% url 'products' %}?sort=price&direction=asc">All Products</a>
+                            <a class="dropdown-item text-black grey-hover" href="{% url 'products' %}?sort=price&direction=asc">All Products</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item text-black" href="{% url 'products' %}?category=honey">Honey</a>
                             <a class="dropdown-item text-black" href="{% url 'products' %}?category=accessories">Accessories</a>
@@ -71,15 +71,15 @@
                         </div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link text-black" href="#">FAQ</a>
+                        <a class="nav-link text-black grey-hover" href="#">FAQ</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link text-black" href="#">Blog</a>
+                        <a class="nav-link text-black grey-hover" href="#">Blog</a>
                       </li>
                     </ul>
                     <ul class="navbar-nav flex-row mb-md-1 mt-md-0 mb-3 mt-2">
                         <li class="nav-item">
-                          <a class="nav-link dropdown-toggle text-black dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <a class="nav-link dropdown-toggle text-black grey-hover dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                   <p class="my-0">
                                   My Account
@@ -92,25 +92,25 @@
                         <div class="dropdown-menu heather" aria-labelledby="navbarDropdown">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a class="dropdown-item text-black" href="#">Product Management</a>
+                                    <a class="dropdown-item text-black grey-hover" href="#">Product Management</a>
                                 {% endif %}
-                                    <a class="dropdown-item text-black" href="#">My Profile</a>
-                                    <a class="dropdown-item text-black" href="#">Logout</a>
+                                    <a class="dropdown-item text-black grey-hover" href="#">My Profile</a>
+                                    <a class="dropdown-item text-black grey-hover" href="#">Logout</a>
                                 {% else %}
-                                    <a class="dropdown-item text-black" href="#">Register</a>                      
-                                    <a class="dropdown-item text-black" href="#">Sign In</a>
+                                    <a class="dropdown-item text-black grey-hover" href="#">Register</a>                      
+                                    <a class="dropdown-item text-black grey-hover" href="#">Sign In</a>
                                 {% endif %}
                         </div>
                         </li>
-                        <li class="nav-item text-black">
+                        <li class="nav-item text-black grey-hover">
                           <form method="GET" action="{% url 'products' %}" class="d-flex flex-column align-items-center text-black">
                             <input class="search-box text-black search-input" type="text" name="q" placeholder="Type to search" aria-label="Search">
                             <div><i class="fa-solid fa-magnifying-glass fa-lg" id="basic-addon1" type="submit"></i></div>
-                            <button class="search-btn" type="button">Search</button>
+                            <button class="search-btn grey-hover" type="button">Search</button>
                           </form>
                         </li>
                         <li class="nav-item">
-                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link grey-hover" href="#">
                               <div class="text-center">
                                   <p class="my-0">
                                       {% if grand_total %}
@@ -152,17 +152,17 @@
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#" title="Facebook">
-              <i class="fab fa-facebook-square fa-2x text-darker"></i>
+              <i class="fab fa-facebook-square fa-2x text-darker white-hover"></i>
             </a>
           </li>
           <li class="list-inline-item text-black">
             <a href="#" title="Twitter">
-              <i class="fab fa-instagram-square fa-2x text-darker mx-2"></i>
+              <i class="fab fa-instagram-square fa-2x text-darker white-hover mx-2"></i>
             </a>
           </li>
           <li class="list-inline-item">
             <a href="#" title="Youtube">
-              <i class="fab fa-youtube-square fa-2x text-darker"></i>
+              <i class="fab fa-youtube-square fa-2x text-darker white-hover"></i>
             </a>
           </li>
         </ul>
