Fixed typo causing js not to load

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -93,6 +93,7 @@
 {% endblock %}
 
 
-{% block postloadjs %}
+{% block post_load_js %}
 {{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
