turned off disabled button styling for quantity decrement when quantity is 1

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -37,7 +37,7 @@
                                     <p class="my-0">£{{ item.product.price }}</p>
                                 </td>
                                 <td class="p3">
-                                    <p class="my-0">£{{ item.quantity }}</p>
+                                    <p class="my-0">{{ item.quantity }}</p>
                                 </td>
                                 <td class="p3">
                                     <p class="my-0">£{{ item.product.price }}</p>
@@ -87,4 +87,4 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock %} 
