--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,7 +50,7 @@
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
-                                    <div class="input-group bg-white">
+                                    <div class="input-group rounded bg-white">
                                         <div class="input-group-prepend">
                                             <button class="decrement-qty btn btn-black" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
