Added quantity boxes to shopping bag page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -84,6 +84,10 @@ input{
     border:none !important;
 }
 
+.bag-links{
+    cursor: pointer;
+}
+
 .category-badge{
     border-style:solid;
     border-width:1px;
