--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -37,7 +37,35 @@
                                     <p class="my-0">£{{ item.product.price }}</p>
                                 </td>
                                 <td class="p3">
-                                    <p class="my-0">{{ item.quantity }}</p>
+                                    <form method="POST" action="" class="form update-form">
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                        <span>
+                                                            <i class="fas fa-minus fa-sm"></i>
+                                                        </span>
+                                                    </button>
+                                                </div>
+                                                <input class="form-control form-control-sm qty_input" type="number"
+                                                    name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                    data-item_id="{{ item.item_id }}"
+                                                    id="id_qty_{{ item.item_id }}">
+                                                <div class="input-group-append">
+                                                    <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                        <span>
+                                                            <i class="fas fa-plus fa-sm"></i>
+                                                        </span>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <a class="update-link text-info bag-link"><small>Update</small></a>
+                                    <a class="remove-item text-danger float-right bag-link" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                                 </td>
                                 <td class="p3">
                                     <p class="my-0">£{{ item.product.price }}</p>
@@ -87,4 +115,29 @@
     </div>
 </div>
 
-{% endblock %} 
+{% endblock %}
+{% block post_load_js %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    //Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    //Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csfrToken = "{{ csrf_token }}";
+        var itemID = $(this).attr('id').split('remove_')[1];
+        var url = `/bag/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrfToken}
+
+        $.post(url, data)
+            .done(function(){
+                location.reload();
+            })
+    })
+</script>
+{% endblock %}
