--- a/static/css/base.css
+++ b/static/css/base.css
@@ -166,3 +166,18 @@ input{
     max-height: 300px;
     margin-right: 50px;
 }
+
+.message-container{
+    position:fixed;
+    top:72px;
+    right: 15px;
+    z-index: 999999999;
+}
+
+.custom-toast{
+    overflow:visible;
+}
+
+.toast-capper{
+    height:2px;
+}
